--- a/src/pages/Home/home.scss
+++ b/src/pages/Home/home.scss
@@ -1,7 +1,87 @@
+@import '../../components/styles';
+
 .divider {
     content: "";
-    background-color: #27272A;
+    background-color: $stroke-stroke-based;
     width: 100%;
     height: 1px;
-    margin: 32px 0;
+}
+
+.sidebar {
+    display: flex;
+    align-items: center;
+    padding: 10px 324px;
+    gap: 40px;
+    @include body-3;
+    color: $text-text-subdued;
+    border-bottom: 1px solid $stroke-stroke-based;
+
+    nav {
+        display: flex;
+        list-style: none;
+        gap: 40px;
+        position: relative;
+
+        li {
+            display: flex;
+            align-items: center;
+
+            &.addTag {
+                height: 40px;
+            }
+
+            &.active {
+                color: $text-text-accent;
+                position: relative;
+
+                &::before {
+                    content: "•";
+                    width: 100%;
+                    font-size: 12px;
+                    position: absolute;
+                    display: flex;
+                    justify-content: center;
+                    bottom: -14px;
+
+                }
+            }
+        }
+    }
+
+    .divider {
+        width: 1px;
+        height: 20px;
+    }
+}
+
+.home-content {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 48px;
+
+    .posts {
+        min-width: 840px;
+        max-width: 840px;
+
+        .divider {
+            margin: 32px 0;
+        }
+    }
+
+    .popular-posts {
+        padding-left: 40px;
+        height: fit-content;
+        border-left: 1px solid $stroke-stroke-based;
+
+        .title-posts {
+            @include headling-3;
+            color: $text-text-base;
+            margin-bottom: 32px;
+        }
+
+        .divider {
+            margin: 24px 0;
+
+        }
+    }
 }
