--- a/src/pages/CreatePost/CreatePost.scss
+++ b/src/pages/CreatePost/CreatePost.scss
@@ -1,5 +1,195 @@
 @import '../../components/styles';
 
+.MuiDrawer-paper {
+    width: 408px;
+    background-color: $background-background-primary !important;
+
+    .drawer-list {
+        display: flex;
+        flex-direction: column;
+        gap: 48px;
+        padding: 0 16px;
+
+        .drawer-title {
+            display: flex;
+            gap: 8px;
+            align-items: center;
+            padding: 20px 0;
+            @include headling-3;
+            color: $text-text-base;
+
+            .drawer-title-icon {
+                width: 40px;
+                height: 40px;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+            }
+        }
+
+        .drawer-tags {
+            display: flex;
+            flex-direction: column;
+            gap: 16px;
+            @include body-2;
+            color: $text-text-base;
+            font-weight: 800;
+
+            .search {
+                max-width: 350px;
+                width: 100%;
+                padding: 9px 12px;
+                background: $background-background-secondary;
+                border: 1px solid $stroke-stroke-based;
+                border-radius: 12px;
+                display: flex;
+                gap: 12px;
+
+                svg {
+                    path {
+                        fill: $icon-icon-base;
+                    }
+                }
+
+                input {
+                    @include body-3;
+                    width: 100%;
+                    border: none;
+                    outline: none;
+                    background: none;
+                    padding: 0;
+                    color: $text-text-base;
+
+                    &::placeholder {
+                        color: $text-text-subduedAlt;
+                        opacity: 1;
+                    }
+                }
+            }
+            .add-tag {
+                display: flex;
+                gap: 12px;
+                align-items: center;
+                padding: 6px 16px;
+                @include body-3;
+                color: $text-text-subdued;
+            }
+            .divider {
+                width: 342px;
+                margin: 0 16px;
+            }
+            .results {
+                @include body-3;
+                color: $text-text-subdued;
+
+                .tags {
+                    position: relative;
+
+                    .menu {
+                        max-height: 178px;
+                        overflow: auto;
+
+                        &::-webkit-scrollbar {
+                            width: 2px;
+                        }
+
+                        &::-webkit-scrollbar-thumb {
+                            background-color: $fill-fill-subdued;
+                            border-radius: 100px;
+                        }
+
+                        .tag {
+                            align-items: center;
+                            gap: 8px;
+                            color: $text-text-base;
+                            height: 20px;
+                            padding: 6px 16px;
+
+                            input[type="checkbox"] {
+                                appearance: none;
+                                -webkit-appearance: none;
+                                display: flex;
+                                align-content: center;
+                                justify-content: center;
+                                border: 1px solid $icon-icon-base;
+                                border-radius: 2px;
+                                width: 16px;
+                                height: 16px;
+                                position: relative;
+                            }
+
+
+                            input[type="checkbox"]::before {
+                                content: "";
+                                position: absolute;
+                                top: 0;
+                                display: flex;
+                                align-items: center;
+                                justify-content: center;
+                                width: 14px;
+                                height: 11px;
+                                padding-top: 3px;
+                                transform: scale(0);
+                                border-radius: 2px;
+                                background-color: $icon-icon-accent;
+                                border: 1px solid $icon-icon-accent;
+
+                            }
+
+                            input[type="checkbox"]:checked {
+                                border: none;
+                            }
+
+                            input[type="checkbox"]:checked::before {
+                                content: url("./tick.svg");
+                                transform: scale(1);
+                            }
+                        }
+                    }
+
+                    .fade-top {
+                        content: '';
+                        width: 100%;
+                        height: 9px;
+                        position: absolute;
+                        top: -1px;
+                        background: linear-gradient(0deg, rgba(24, 24, 27, 0.00) 0%, #18181B 49.5%);
+                    }
+
+                    .fade-bot {
+                        content: '';
+                        width: 100%;
+                        height: 9px;
+                        position: absolute;
+                        bottom: -1px;
+                        background: linear-gradient(180deg, rgba(24, 24, 27, 0.00) 0%, #18181B 49.5%);
+                    }
+                }
+            }
+            .selected-tags {
+                display: flex;
+                flex-wrap: wrap;
+                gap: 8px;
+                .tag {
+                    display: flex;
+                    align-items: center;
+                    gap: 16px;
+                    padding: 6px 8px 6px 16px;
+                    border: 1px solid var(--stroke-stroke-based, #27272A);
+                    border-radius: 100px;
+                    @include body-2;
+                    color: $text-text-base;
+                    .remove-tag {
+                        cursor: pointer;
+                        display: flex;
+                        align-items: center;
+                    }
+                }
+            }
+        }
+    }
+}
+
 .create-post {
     width: 100%;
     display: flex;
@@ -11,13 +201,16 @@
     .content {
         width: 624px;
         color: $text-text-base;
+
         img {
             width: 100%;
         }
+
         .icon-menu {
             display: flex;
             flex-direction: column;
             gap: 8px;
+
             .icon {
                 display: flex;
                 justify-content: center;
@@ -27,23 +220,28 @@
                 border-radius: 50%;
                 border: 1px solid $icon-icon-base;
                 transition: all 0.3s ease;
+
                 &.plus {
-                    
+
                     svg {
                         width: 32px;
                         height: 32px;
                     }
                 }
+
                 &.image {
                     opacity: 0;
                 }
             }
+
             &.active {
                 .icon {
                     transition: all 0.3s ease;
+
                     &.plus {
                         rotate: 45deg;
                     }
+
                     &.image {
                         opacity: 1;
                     }
