--- a/src/components/Post/post.scss
+++ b/src/components/Post/post.scss
@@ -9,6 +9,7 @@ a {
         gap: 64px;
 
         .info {
+            width: 100%;
             .author-info {
                 display: flex;
                 align-items: center;
