--- a/src/components/_styles.scss
+++ b/src/components/_styles.scss
@@ -11,7 +11,9 @@ $text-text-subduedAlt: #71717A;
 $text-text-subdued: #A1A1AA;
 $text-text-base: #FFFFFE;
 $text-text-accent: #FF8906;
+$text-text-inverse: #18181B;
 $fill-fill-subdued: #71717A;
+$buttonBackground-buttonBackground-neutral: #FFFFFE;
 @mixin headling-1 {
     font-family: 'Mulish';
     font-size: 36px;
