--- a/src/pages/CreatePost/CreatePost.scss
+++ b/src/pages/CreatePost/CreatePost.scss
@@ -1,7 +1,7 @@
 @import '../../components/styles';
 
 .MuiDrawer-paper {
-    width: 408px;
+    width: 410px;
     background-color: $background-background-primary !important;
 
     .drawer-list {
@@ -9,6 +9,8 @@
         flex-direction: column;
         gap: 48px;
         padding: 0 16px;
+        height: 100%;
+        position: relative;
 
         .drawer-title {
             display: flex;
@@ -66,6 +68,7 @@
                     }
                 }
             }
+
             .add-tag {
                 display: flex;
                 gap: 12px;
@@ -73,11 +76,14 @@
                 padding: 6px 16px;
                 @include body-3;
                 color: $text-text-subdued;
+                cursor: pointer;
             }
+
             .divider {
                 width: 342px;
                 margin: 0 16px;
             }
+
             .results {
                 @include body-3;
                 color: $text-text-subdued;
@@ -166,10 +172,12 @@
                     }
                 }
             }
+
             .selected-tags {
                 display: flex;
                 flex-wrap: wrap;
                 gap: 8px;
+
                 .tag {
                     display: flex;
                     align-items: center;
@@ -179,6 +187,7 @@
                     border-radius: 100px;
                     @include body-2;
                     color: $text-text-base;
+
                     .remove-tag {
                         cursor: pointer;
                         display: flex;
@@ -187,6 +196,99 @@
                 }
             }
         }
+
+        .drawer-image {
+            display: flex;
+            flex-direction: column;
+            gap: 16px;
+
+            .title {
+                @include body-2;
+                font-weight: 800;
+                color: $text-text-base;
+            }
+
+            .description {
+                @include body-3;
+                color: $text-text-subdued;
+            }
+
+            .image {
+                border-radius: 16px;
+                height: 184px;
+
+                img {
+                    width: 100%;
+                    height: 100%;
+                    object-fit: cover;
+                    border-radius: 16px;
+                }
+            }
+
+            .add-image {
+                display: flex;
+                align-items: center;
+                flex-direction: column;
+                padding: 48px 61px;
+                gap: 16px;
+                background: $background-background-secondary;
+                border-radius: 16px;
+                border: 1px solid $stroke-stroke-based;
+
+                p {
+                    @include body-2;
+                    color: $text-text-subdued;
+                    text-align: center;
+
+                    span {
+                        color: $text-text-accent;
+                    }
+                }
+            }
+        }
+
+        .drawer-button {
+            display: flex;
+            width: 378px;
+            justify-content: center;
+            position: absolute;
+            bottom: 32px;
+
+            .btn {
+                display: flex;
+                // height: 40px;
+                padding: 8px 48px;
+                justify-content: center;
+                align-items: center;
+                width: fit-content;
+                border-radius: 100px;
+                border: none;
+                background: $buttonBackground-buttonBackground-neutral;
+                @include body-2;
+                color: $text-text-inverse;
+                cursor: pointer;
+
+                &:disabled {
+                    cursor: default;
+                    opacity: 0.36;
+                }
+            }
+        }
+    }
+}
+
+header {
+    .create-btn {
+        display: flex;
+        height: 40px;
+        width: 208px;
+        align-items: center;
+        justify-content: center;
+        border-radius: 100px;
+        background: $buttonBackground-buttonBackground-neutral;
+        border: none;
+        @include body-2;
+        color: $text-text-inverse;
     }
 }
 
@@ -204,6 +306,7 @@
 
         img {
             width: 100%;
+            margin-bottom: 20px;
         }
 
         .icon-menu {
@@ -278,7 +381,6 @@
     height: 0;
     pointer-events: none;
 }
-
 .ProseMirror {
     outline: none;
 }
@@ -287,4 +389,126 @@
 #tippy-6,
 #tippy-4 {
     inset: 43px auto auto -66px !important;
+}
+
+.search-container {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    width: 700px;
+
+    form {
+        display: flex;
+        gap: 16px;
+        .search {
+            max-width: 250px;
+            width: 100%;
+            padding: 9px 12px;
+            background: $background-background-secondary;
+            border: 1px solid $stroke-stroke-based;
+            border-radius: 12px;
+            display: flex;
+            gap: 12px;
+
+            svg {
+                path {
+                    fill: $icon-icon-base;
+                }
+            }
+
+            input {
+                @include body-3;
+                width: 100%;
+                border: none;
+                outline: none;
+                background: none;
+                padding: 0;
+                color: $text-text-base;
+
+                &::placeholder {
+                    color: $text-text-subduedAlt;
+                    opacity: 1;
+                }
+            }
+        }
+        button {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            background: $buttonBackground-buttonBackground-neutral;
+            border: none;
+            cursor: pointer;
+            outline: none;
+            border-radius: 8px;
+            padding: 0 20px;
+
+        }
+    }
+}
+.bubble-menu {
+    display: flex;
+    background: $background-background-secondary;
+    border-radius: 16px;
+    button {
+        width: 35px;
+        height: 35px;
+        margin: 5px;
+        background: none;
+        outline: none;
+        border: none;
+        padding: 0;
+        border-radius: 8px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        cursor: pointer;
+        &.is-active {
+            background: $background-background-primary;
+        }
+        svg {
+            fill: $icon-icon-subdued;
+        }
+    }
+}
+.search-results {
+    display: flex;
+    flex-wrap: wrap;
+    width: 700px;
+    justify-content: space-between;
+    gap: 6px;
+    border-radius: 16px;
+    overflow: hidden;
+
+    .image-result {
+        position: relative;
+        height: 153px;
+        // margin: 5px 5px 5px 0;
+        cursor: pointer;
+
+        img {
+            height: 153px;
+            min-width: 220px;
+            width: auto;
+            margin: 0;
+        }
+    }
+}
+
+.show-more {
+    display: flex;
+    justify-content: space-between;
+
+    button {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        background: none;
+        border: none;
+        cursor: pointer;
+        outline: none;
+
+        svg {
+            fill: $icon-icon-subdued
+        }
+    }
 }
