--- a/src/pages/FullPost/FullPost.scss
+++ b/src/pages/FullPost/FullPost.scss
@@ -96,9 +96,12 @@
                 @include body-1;
                 color: $text-text-base;
             }
-            img {
+            .post-image {
                 width: 100%;
                 margin-bottom: 128px;
+            }
+            img {
+                width: 100%;
             }
         }
     }
