--- a/src/pages/Home/home.scss
+++ b/src/pages/Home/home.scss
@@ -25,9 +25,11 @@
         li {
             display: flex;
             align-items: center;
-
+cursor: pointer;
             &.addTag {
                 height: 40px;
+                position: relative;
+                cursor: pointer;
             }
 
             &.active {
@@ -83,6 +85,122 @@
         .divider {
             margin: 24px 0;
 
+        }
+    }
+}
+
+
+.tags-dropdown {
+    position: absolute;
+    top: 40px;
+    left: 0;
+    background-color: $background-background-secondary;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+    padding: 6px 12px;
+    border-radius: 8px;
+    display: none;
+    &.active {
+        display: block;
+    }
+}
+
+.fade-top {
+    content: '';
+    z-index: 100;
+    width: 200px;
+    height: 9px;
+    position: absolute;
+    top: 12px;
+    background: linear-gradient(0deg, rgba(39, 39, 42, 0) 0%, #27272A 49.5%);
+}
+
+.fade-bot {
+    z-index: 100;
+    content: '';
+    width: 200px;
+    height: 9px;
+    position: absolute;
+    bottom: 12px;
+    background: linear-gradient(180deg, rgba(39, 39, 42, 0) 0%, #27272A 49.5%);
+}
+
+.tag-dropdown {
+    display: none;
+    position: relative;
+    z-index: 1;
+    padding: 0;
+    margin: 0;
+    list-style: none;
+    height: 220px;
+    width: 200px;
+    overflow-y: auto;
+    margin: 12px 0;
+    cursor: default;
+
+    &::-webkit-scrollbar {
+        width: 2px;
+    }
+
+    &::-webkit-scrollbar-thumb {
+        background-color: $fill-fill-subdued;
+        border-radius: 100px;
+        opacity: 0;
+    }
+
+    &.active {
+        display: flex;
+        flex-direction: column;
+        gap: 16px;
+    }
+
+    .tag {
+        display: flex;
+        align-items: center;
+        gap: 8px;
+        color: $text-text-base;
+        height: 20px;
+
+        input[type="checkbox"] {
+            appearance: none;
+            -webkit-appearance: none;
+            display: flex;
+            align-content: center;
+            justify-content: center;
+            border: 1px solid $icon-icon-base;
+            border-radius: 2px;
+            width: 16px;
+            height: 16px;
+            position: relative;
+
+            cursor: pointer;
+        }
+
+
+        input[type="checkbox"]::before {
+            content: "";
+            position: absolute;
+            top: 0;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            width: 14px;
+            height: 11px;
+            padding-top: 3px;
+            transform: scale(0);
+            border-radius: 2px;
+            background-color: $icon-icon-accent;
+            border: 1px solid $icon-icon-accent;
+
+        }
+
+        input[type="checkbox"]:checked {
+            border: none;
+        }
+
+        input[type="checkbox"]:checked::before {
+            content: url("./tick.svg");
+            transform: scale(1);
         }
     }
 }
