--- a/src/components/_styles.scss
+++ b/src/components/_styles.scss
@@ -2,6 +2,7 @@
 
 $background-background-primary: #18181B;
 $background-background-secondary: #27272A;
+$stroke-stroke-accent: #FF8906;
 $stroke-stroke-based: #27272A;
 $stroke-stroke-subdued: #27272A;
 $icon-icon-base: #FFFFFE;
@@ -54,5 +55,5 @@ $buttonBackground-buttonBackground-neutral: #FFFFFE;
     font-size: 14px;
     font-weight: 400;
     line-height: 20px;
-    letter-spacing: 0.5px;
+    letter-spacing: 0.25px;
 }
