--- a/src/pages/Home/home.scss
+++ b/src/pages/Home/home.scss
@@ -21,21 +21,33 @@
         list-style: none;
         gap: 40px;
         position: relative;
+        align-items: center;
+
+        .filter-tags {
+            height: 20px;
+        }
 
         li {
             display: flex;
             align-items: center;
             cursor: pointer;
+            height: 20px;
+            transition: 0.2s ease-in-out;
 
             &.addTag {
                 height: 40px;
                 position: relative;
                 cursor: pointer;
+
+                .plus {
+                    height: 20px;
+                }
             }
 
             &.active {
                 color: $text-text-accent;
                 position: relative;
+                transition: 0.2s ease-in-out;
 
                 &::before {
                     content: "•";
@@ -45,7 +57,8 @@
                     display: flex;
                     justify-content: center;
                     bottom: -14px;
-
+                    opacity: 1;
+                    transition: opacity 0.2s ease-in-out;
                 }
             }
         }
@@ -113,7 +126,7 @@
     width: 200px;
     height: 9px;
     position: absolute;
-    top: 12px;
+    top: 14px;
     background: linear-gradient(0deg, rgba(39, 39, 42, 0) 0%, #27272A 49.5%);
 }
 
@@ -123,7 +136,7 @@
     width: 200px;
     height: 9px;
     position: absolute;
-    bottom: 12px;
+    bottom: 14px;
     background: linear-gradient(180deg, rgba(39, 39, 42, 0) 0%, #27272A 49.5%);
 }
 
@@ -161,7 +174,6 @@
         align-items: center;
         gap: 8px;
         color: $text-text-base;
-        height: 20px;
 
         input[type="checkbox"] {
             appearance: none;
