--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -118,6 +118,9 @@ header {
         display: flex;
         flex-direction: column;
         gap: 16px;
+        p {
+            cursor: pointer;
+        }
     }
 }
 
