--- a/src/components/Post/post.scss
+++ b/src/components/Post/post.scss
@@ -1,5 +1,138 @@
 @import '../styles.scss';
 
+.user-post {
+    display: flex;
+    gap: 64px;
+
+    .info {
+        width: 100%;
+
+        .author-info {
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            margin-bottom: 12px;
+
+            .author-block {
+                display: flex;
+                align-items: center;
+                gap: 8px;
+
+                img {
+                    width: 32px;
+                    height: 32px;
+                    border-radius: 50%;
+                }
+
+                p {
+                    height: 20px;
+                    margin: 0;
+
+                    &.author {
+                        @include body-3;
+                        color: $text-text-base;
+                    }
+
+                    &.date {
+                        @include body-3;
+                        color: $text-text-subdued;
+                    }
+                }
+            }
+
+            .delete-icon {
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                width: 40px;
+                height: 40px;
+                cursor: pointer;
+
+                svg {
+                    height: 30px;
+                    width: 30px;
+                }
+            }
+        }
+
+        .text-info {
+            display: flex;
+            flex-direction: column;
+            gap: 8px;
+
+            .title {
+                @include headling-2;
+                color: $text-text-base;
+            }
+
+            .text {
+                @include body-2;
+                color: $text-text-base;
+            }
+        }
+
+        .actions {
+            @include body-3;
+            color: $text-text-base;
+            height: 40px;
+            padding: 16px 0;
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+
+            .tags {
+                display: flex;
+                gap: 8px;
+                flex-wrap: wrap;
+
+                .tag {
+                    padding: 4px 12px;
+                    border-radius: 100px;
+                    border: 1px solid $stroke-stroke-based;
+                }
+            }
+
+            .icons {
+                display: flex;
+
+                .icon {
+                    height: 40px;
+                    display: flex;
+                    align-items: center;
+                    padding: 0px 8px;
+                    gap: 8px;
+
+                    p {
+                        @include body-3;
+                        color: $text-text-subdued;
+                    }
+
+                    &.other {
+                        padding: 0;
+                        width: 40px;
+                        justify-content: center;
+                    }
+                }
+            }
+        }
+    }
+
+    .image {
+        display: flex;
+        align-items: center;
+        min-width: 450px;
+        max-width: 450px;
+
+        img {
+            width: 100%;
+            height: 300px;
+            object-fit: cover;
+            border-radius: 16px;
+
+        }
+    }
+}
+
 a {
     text-decoration: none;
     color: inherit;
@@ -130,6 +263,8 @@ a {
             }
         }
     }
+
+
 
     .popular-post {
         .info {
