--- a/src/pages/FullPost/FullPost.scss
+++ b/src/pages/FullPost/FullPost.scss
@@ -19,7 +19,7 @@
             gap: 32px;
 
             .title {
-                @include headling-1;
+                @include heading-1;
                 color: $text-text-base;
             }
 
