--- a/src/pages/CreatePost/CreatePost.scss
+++ b/src/pages/CreatePost/CreatePost.scss
@@ -17,7 +17,7 @@
             gap: 8px;
             align-items: center;
             padding: 20px 0;
-            @include headling-3;
+            @include heading-3;
             color: $text-text-base;
 
             .drawer-title-icon {
@@ -256,7 +256,6 @@
 
             .btn {
                 display: flex;
-                // height: 40px;
                 padding: 8px 48px;
                 justify-content: center;
                 align-items: center;
@@ -267,10 +266,12 @@
                 @include body-2;
                 color: $text-text-inverse;
                 cursor: pointer;
+                transition: all 0.2s ease;
 
                 &:disabled {
                     cursor: default;
                     opacity: 0.36;
+                    transition: all 0.2s ease;
                 }
             }
         }
@@ -289,6 +290,13 @@ header {
         border: none;
         @include body-2;
         color: $text-text-inverse;
+        transition: all 0.2s ease;
+
+        &:disabled {
+            cursor: default;
+            opacity: 0.36;
+            transition: all 0.2s ease;
+        }
     }
 }
 
@@ -359,15 +367,15 @@ header {
             @include body-1;
 
             h1 {
-                @include headling-1;
+                @include heading-1;
             }
 
             h2 {
-                @include headling-2;
+                @include heading-2;
             }
 
             h3 {
-                @include headling-3;
+                @include heading-3;
             }
         }
     }
@@ -381,6 +389,7 @@ header {
     height: 0;
     pointer-events: none;
 }
+
 .ProseMirror {
     outline: none;
 }
@@ -400,6 +409,7 @@ header {
     form {
         display: flex;
         gap: 16px;
+
         .search {
             max-width: 250px;
             width: 100%;
@@ -431,6 +441,7 @@ header {
                 }
             }
         }
+
         button {
             display: flex;
             justify-content: center;
@@ -445,10 +456,12 @@ header {
         }
     }
 }
+
 .bubble-menu {
     display: flex;
     background: $background-background-secondary;
     border-radius: 16px;
+
     button {
         width: 35px;
         height: 35px;
@@ -462,14 +475,17 @@ header {
         justify-content: center;
         align-items: center;
         cursor: pointer;
+
         &.is-active {
             background: $background-background-primary;
         }
+
         svg {
             fill: $icon-icon-subdued;
         }
     }
 }
+
 .search-results {
     display: flex;
     flex-wrap: wrap;
